fixed db extension logic and excluded one more dependency