@@ -16,11 +16,12 @@ import guru.qa.niffler.jupiter.annotation.DBUser;
 import org.junit.jupiter.api.extension.*;
 
 import java.util.Arrays;
+import java.util.stream.Collectors;
 
 public class DBUserExtension implements BeforeEachCallback, AfterTestExecutionCallback, ParameterResolver {
 
-    private static final AuthUserDAO authUserDAO = new AuthUserDAOSpringJdbc();
-    private static final UserDataUserDAO userDataUserDAO = new AuthUserDAOSpringJdbc();
+    private static final AuthUserDAO authUserDAO = new AuthUserDAOHibernate();
+    private static final UserDataUserDAO userDataUserDAO = new UserdataUserDAOHibernate();
     public static ExtensionContext.Namespace NAMESPACE = ExtensionContext.Namespace.create(DBUserExtension.class);
 
     @Override
@@ -49,8 +50,9 @@ public class DBUserExtension implements BeforeEachCallback, AfterTestExecutionCa
                     .map(authority -> {
                         var ae = new AuthorityEntity();
                         ae.setAuthority(authority);
+                        ae.setUser(user);
                         return ae;
-                    }).toList()
+                    }).collect(Collectors.toList())
             );
             authUserDAO.createUser(user);
 
